cadc-util: update IdentityManager interface, deprecate Authenticator interface remove using well-known class name to load both default to NoOpIdentityManager